Add authorization middleware to the groups route
- also added the bearer token to the header within axios in the web client
